# card_extractor

./: .gitignore  prompt_plan.md  pyproject.toml  run_tests.sh  spec.md  test_pdf_generator.py  todo.md
src/card_extractor/: __init__.py  main.py
tests/: __init_.py  main.py
